full batch gd done

--- a/ml/practice.ipynb
+++ b/ml/practice.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Gradient Descent Implementation - From Scratch"
+    "#### Gradient Descent Implementation - From Scratch \n",
+    "\n",
+    "- NOTE: Standardization is required for gradient descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.68042969],\n",
+       "       [ 1.34856498],\n",
+       "       [-0.4660893 ],\n",
+       "       [-2.48292726]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = X_train_std.shape[0]\n",
+    "eta = 0.1\n",
+    "epochs = 100\n",
+    "n_iterations = epochs\n",
+    "theta_FullBatchGD = np.random.randn(4, 1)\n",
+    "\n",
+    "theta_FullBatchGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(160, 4) (4, 160) (4, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_std_bias.shape, X_train_std_bias.T.shape, theta_FullBatchGD.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(160,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(160, 1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = y_train\n",
+    "print(d.shape)\n",
+    "print(d.reshape(-1, 1).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for iteration in range(n_iterations):\n",
+    "\n",
+    "    nable_MSE = (2/m) * X_train_std_bias.T.dot(X_train_std_bias.dot(theta_FullBatchGD) - y_train.reshape(-1, 1))\n",
+    "    theta_FullBatchGD = theta_FullBatchGD - eta * nable_MSE"
    ]
   },
   {
@@ -257,19 +346,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dd\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dd' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[14.10000006],\n",
+       "       [ 3.76419623],\n",
+       "       [ 2.79230621],\n",
+       "       [ 0.05597609]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dd"
+    "theta_FullBatchGD"
    ]
   },
   {
