--- a/ml/practice.ipynb
+++ b/ml/practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "4  180.8   10.8       58.4   12.9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,19 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.68042969],\n",
-       "       [ 1.34856498],\n",
-       "       [-0.4660893 ],\n",
-       "       [-2.48292726]])"
+       "array([[-2.26133795],\n",
+       "       [ 0.2323809 ],\n",
+       "       [-0.92321019],\n",
+       "       [ 1.05544777]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -301,25 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(160,)\n"
+      "(160,)\n",
+      "(160, 1)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(160, 1)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -330,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,25 +333,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[14.10000006],\n",
-       "       [ 3.76419623],\n",
-       "       [ 2.79230621],\n",
-       "       [ 0.05597609]])"
+       "       [ 3.76419661],\n",
+       "       [ 2.79230191],\n",
+       "       [ 0.05598035]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "theta_FullBatchGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_iterations = 50\n",
+    "t0 = 7\n",
+    "t1 = 50\n",
+    "t = 0\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "theta_StochaisticGD = np.random.rand(4, 1)\n",
+    "\n",
+    "def lr_sim_annealing(t):\n",
+    "\n",
+    "    return (t0)/(t + t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for iteration in range(n_iterations):\n",
+    "\n",
+    "    for i in range(m):\n",
+    "        t = t + 1\n",
+    "        \n",
+    "        random_sample = np.random.randint(m)\n",
+    "        X_train_std_bias_sample = X_train_std_bias[random_sample:random_sample+1]\n",
+    "        y_train_sample = y_train[random_sample:random_sample+1]\n",
+    "\n",
+    "        nable_MSE = 2 * X_train_std_bias_sample.T.dot(X_train_std_bias_sample.dot(theta_StochaisticGD) - y_train_sample)\n",
+    "        \n",
+    "        theta_StochaisticGD = theta_StochaisticGD - eta * nable_MSE\n",
+    "\n",
+    "        eta = lr_sim_annealing(eta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14.66912076],\n",
+       "       [ 3.14696776],\n",
+       "       [ 2.65614395],\n",
+       "       [-0.2760452 ]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_StochaisticGD"
    ]
   },
   {
