mini batch gd done

--- a/ml/practice.ipynb
+++ b/ml/practice.ipynb
@@ -421,6 +421,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_iterations = 100\n",
+    "t0 = 7\n",
+    "t1 = 50\n",
+    "t = 0\n",
+    "batch_size = 16\n",
+    "theta_MiniBatchGD = np.random.randn(4, 1)\n",
+    "\n",
+    "for iteration in range(n_iterations):\n",
+    "\n",
+    "    random_indices = np.random.permutation(m)\n",
+    "\n",
+    "    X_train_std_bias_shuffled = X_train_std_bias[random_indices]\n",
+    "    y_train_shuffled = y_train[random_indices]\n",
+    "\n",
+    "    for i in range(0, m, batch_size):\n",
+    "\n",
+    "        t = t + 1\n",
+    "\n",
+    "        X_i = X_train_std_bias_shuffled[i : i + batch_size]\n",
+    "        y_i = y_train_shuffled[i : i + batch_size]\n",
+    "\n",
+    "        nabla_MSE = 2/batch_size * X_i.T.dot(X_i.dot(theta_MiniBatchGD) - y_i.reshape(-1, 1))\n",
+    "\n",
+    "        theta_MiniBatchGD = theta_MiniBatchGD - eta * nabla_MSE\n",
+    "\n",
+    "        eta = lr_sim_annealing(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14.0987102 ],\n",
+       "       [ 3.76590088],\n",
+       "       [ 2.79302231],\n",
+       "       [ 0.05697789]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_MiniBatchGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8,  6,  2,  1,  3,  0, 10,  4,  9,  5, 11,  7])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.permutation(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
