--- a/ml/practice.ipynb
+++ b/ml/practice.ipynb
@@ -255,19 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-2.26133795],\n",
-       "       [ 0.2323809 ],\n",
-       "       [-0.92321019],\n",
-       "       [ 1.05544777]])"
+       "array([[ 0.36684787],\n",
+       "       [ 0.38050137],\n",
+       "       [-0.1889217 ],\n",
+       "       [-0.63331843]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,19 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[14.10000006],\n",
-       "       [ 3.76419661],\n",
-       "       [ 2.79230191],\n",
-       "       [ 0.05598035]])"
+       "       [ 3.76419637],\n",
+       "       [ 2.79230458],\n",
+       "       [ 0.05597771]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "       [-0.2760452 ]])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,19 +455,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[14.0987102 ],\n",
-       "       [ 3.76590088],\n",
-       "       [ 2.79302231],\n",
-       "       [ 0.05697789]])"
+       "array([[14.09808192],\n",
+       "       [ 3.76583336],\n",
+       "       [ 2.79537353],\n",
+       "       [ 0.05779406]])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,22 +478,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 8,  6,  2,  1,  3,  0, 10,  4,  9,  5, 11,  7])"
+       "1683436500.8491154"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.permutation(12)"
+    "np.random.permutation(12)\n",
+    "time.time()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Polynomial Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-5 {color: black;background-color: white;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "poly_features = PolynomialFeatures(degree = 3, include_bias = False)\n",
+    "\n",
+    "X_poly = poly_features.fit_transform(X_train)\n",
+    "\n",
+    "poly_reg = LinearRegression()\n",
+    "\n",
+    "poly_reg.fit(X_poly, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_new_poly = poly_features.transform(X_test)\n",
+    "y_pred_poly= poly_reg.predict(X_new_poly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>30</th>\n",
+       "      <th>31</th>\n",
+       "      <th>32</th>\n",
+       "      <th>33</th>\n",
+       "      <th>34</th>\n",
+       "      <th>35</th>\n",
+       "      <th>36</th>\n",
+       "      <th>37</th>\n",
+       "      <th>38</th>\n",
+       "      <th>39</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.900000</td>\n",
+       "      <td>22.400000</td>\n",
+       "      <td>21.400000</td>\n",
+       "      <td>7.300000</td>\n",
+       "      <td>24.700001</td>\n",
+       "      <td>12.600000</td>\n",
+       "      <td>22.299999</td>\n",
+       "      <td>8.400000</td>\n",
+       "      <td>11.50000</td>\n",
+       "      <td>14.900000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.600000</td>\n",
+       "      <td>11.300000</td>\n",
+       "      <td>23.700001</td>\n",
+       "      <td>8.700000</td>\n",
+       "      <td>16.100000</td>\n",
+       "      <td>20.700001</td>\n",
+       "      <td>11.60000</td>\n",
+       "      <td>20.799999</td>\n",
+       "      <td>11.900000</td>\n",
+       "      <td>6.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17.121777</td>\n",
+       "      <td>22.231934</td>\n",
+       "      <td>21.456097</td>\n",
+       "      <td>7.278682</td>\n",
+       "      <td>24.254593</td>\n",
+       "      <td>13.130607</td>\n",
+       "      <td>22.543484</td>\n",
+       "      <td>8.601265</td>\n",
+       "      <td>11.62699</td>\n",
+       "      <td>15.536464</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.227007</td>\n",
+       "      <td>10.716135</td>\n",
+       "      <td>22.725266</td>\n",
+       "      <td>8.449516</td>\n",
+       "      <td>16.172367</td>\n",
+       "      <td>20.841984</td>\n",
+       "      <td>10.91869</td>\n",
+       "      <td>20.718019</td>\n",
+       "      <td>12.141545</td>\n",
+       "      <td>6.423879</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0          1          2         3          4          5          6    \n",
+       "0  16.900000  22.400000  21.400000  7.300000  24.700001  12.600000  22.299999  \\\n",
+       "1  17.121777  22.231934  21.456097  7.278682  24.254593  13.130607  22.543484   \n",
+       "\n",
+       "         7         8          9   ...         30         31         32   \n",
+       "0  8.400000  11.50000  14.900000  ...  10.600000  11.300000  23.700001  \\\n",
+       "1  8.601265  11.62699  15.536464  ...  11.227007  10.716135  22.725266   \n",
+       "\n",
+       "         33         34         35        36         37         38        39  \n",
+       "0  8.700000  16.100000  20.700001  11.60000  20.799999  11.900000  6.900000  \n",
+       "1  8.449516  16.172367  20.841984  10.91869  20.718019  12.141545  6.423879  \n",
+       "\n",
+       "[2 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_df_pred = pd.DataFrame([y_test, y_pred_poly])\n",
+    "poly_df_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_reg.score(X_new_poly, y_pred_poly)"
    ]
   },
   {
